--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -1,3 +1,9 @@
+:root {
+    --background-one: #ffffff;
+
+    --foreground-one: #000000;
+}
+
 html, body, #root {
     height: 100%;
     width: 100%;
