--- a/frontend/src/assets/styles/map.css
+++ b/frontend/src/assets/styles/map.css
@@ -1,14 +1,8 @@
 :root {
-    --map-block-factor: 1;
-    /* --full-block: calc(var(--iunit) * var(--map-block-factor)); infinity unit * factor ... Factor to be determined by map size    */
-    --full-block: 5vw;
+    
+    /* The below two variables will be determined by js   */
+    --full-block: 5vw; 
     --map-transform: translate(-50%, -50%);
-
-    --netural: 120,120,120;
-    --character-one: 255, 0, 0;
-    --character-two: 0, 0, 255;
-    --character-three: 0, 255, 0;
-    --character-four: 0, 255, 255;
 }
 
 .map-container {
@@ -23,6 +17,8 @@
 
     user-select: none;
     pointer-events: none;
+
+    /* filter: blur( 2px ); */
 }
 
 .row {
@@ -75,7 +71,6 @@
 
 /* Half edges */
 .half-edge {
-    background-color: rgba(var(--netural), 1);
     /* of two halves, growth will take each half length to 50% */
     flex-grow: 1;
     height: 100%; /* Half edge thickness should occupy container*/
@@ -94,4 +89,23 @@
 
 .half-edge.end{
     transform: rotate(180deg);
+}
+
+
+.character-blob {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: calc(var(--full-block) * 0.25);
+    height: calc(var(--full-block) * 0.25);
+
+    background-color: var(--background-one);
+}
+
+.character-blob > .inner {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    width: 97%;
+    height: 97%;
 }
