lots of styling changes and refactoring

--- a/frontend/src/assets/styles/map.css
+++ b/frontend/src/assets/styles/map.css
@@ -96,7 +96,9 @@
     transform: rotate(180deg);
 }
 
-
+.character-blob {
+    transition: 1s;
+}
 .character-blob {
     position: absolute;
     transform: translate(-50%, -50%);
