--- a/frontend/src/assets/styles/light-switch.css
+++ b/frontend/src/assets/styles/light-switch.css
@@ -1,5 +1,8 @@
 .light-switch {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 1%;
+    right: 1%;
+    font-size: calc(20 * var(--iunit));
+    border:0;
+    border-radius: calc(10 * var(--iunit));
 }
