--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -18,13 +18,17 @@
     --background-one: #111111;
 
     --foreground-one: #ffffff;
+    --foreground-two: #ff8888; /*Will generally be for clickable hovers*/
+    --foreground-three: #ff0000; /*Will generally be for clickable actives*/
 }
 
 html, body, #root {
+    position: absolute;
     height: 100%;
     width: 100%;
     background-color: var(--background-one);
     animation: opacity0to1 1s;
+    overflow: hidden;
 }
 
 * {
@@ -34,12 +38,35 @@ html, body, #root {
 
     color: var(--foreground-one);
     background-color: transparent
+}
 
-    /* user-select: none;
+.digital-dream {
     font-family: "Digital Dream Regular", Courier, monospace;
-    font-style: normal;
-    font-weight: normal; */
-        
+}
+
+@keyframes opacity0to1 {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+/*****************************
+******** Clickables **********
+*****************************/
+
+.clickable {
+    cursor: pointer;
+}
+
+.clickable:hover {
+    color:var(--foreground-two)
+}
+
+.clickable:active {
+    color:var(--foreground-three)
 }
 
 
@@ -53,14 +80,4 @@ button:hover{
 }
 button:active{
     background-color: green;
-}
-
-
-@keyframes opacity0to1 {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
