metric ton of backend work

--- a/frontend/src/assets/styles/form-connections.css
+++ b/frontend/src/assets/styles/form-connections.css
@@ -31,6 +31,10 @@ input.invalid:active{
     color:var(--positive-color)
 }
 
+li.owner{
+    color:var(--foreground-three)
+}
+
 .no-access {
     pointer-events: none;
     user-select: none;
