added handling for usernames that are more than 16 letters inside of lobbies

--- a/frontend/src/assets/styles/form-connections.css
+++ b/frontend/src/assets/styles/form-connections.css
@@ -15,7 +15,7 @@
 .center-wrapper.form-connection > ul {  
     margin-top: calc(var(--iunit) * 3);
 }
-.center-wrapper.form-connection > ul > li {
+.center-wrapper.form-connection ul.player-list {
     border-bottom: var(--foreground-two) solid calc(var(--iunit) * .5);
 }
 
