changed id fonts to monospace and added notification if lobby changes while owner is attempting to start it

--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -50,6 +50,12 @@ html, body, #root {
     font-weight: normal;
 }
 
+.monospace {
+    
+    font-family: monospace, monospace;
+    font-style: normal;
+}
+
 
 .three {
     color: var(--foreground-three);
