enhanced detection of valid data to be not undefined instead of if true, to allow 0 indices and also added user-select none in main.css

--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -19,6 +19,8 @@ html, body, #root {
     background-color: var(--background-one);
     animation: opacity0to1 1s;
     overflow: hidden;
+    
+    user-select: none;
 }
 @keyframes opacity0to1 { 0% {opacity: 0;} 100% {opacity: 1;} }
 
