added logic to start game"

--- a/frontend/src/assets/styles/countdown.css
+++ b/frontend/src/assets/styles/countdown.css
@@ -8,4 +8,6 @@
     font-family: 'Digital Dream Regular';
     font-weight: 900;
     color: var(--foreground-three);
+
+    background-color: var(--background-one-faded);
 }
