--- a/frontend/src/assets/styles/_themes.css
+++ b/frontend/src/assets/styles/_themes.css
@@ -1,6 +1,7 @@
 body.black-on-white{
     color-scheme: light;
     --background-one: #ffffff;
+    --background-one-faded: #ffffff77;
     --background-two: #333333;
     --background-two-faded: #33333377;
     --foreground-one: #000000;
@@ -25,6 +26,7 @@ body.black-on-white{
 body.two-shades-of-gray{
     color-scheme: light;
     --background-one: #111111;
+    --background-one-faded: #11111177;
     --background-two: #444444;
     --background-two-faded: #44444477;
     --foreground-one: #eeeeee;
@@ -49,6 +51,7 @@ body.two-shades-of-gray{
 body.white-on-black{
     color-scheme: dark;
     --background-one: #000000;
+    --background-one-faded: #00000077;
     --background-two: #111111;
     --background-two-faded: #11111177;
     --foreground-one: #ffffff;
