--- a/frontend/src/assets/styles/main.css
+++ b/frontend/src/assets/styles/main.css
@@ -79,6 +79,22 @@ html, body, #root {
 
 
 
+.no-access {
+    pointer-events: none;
+    user-select: none;
+
+    filter: blur(calc(var(--iunit) * 10));
+}
+
+.soft-no-access {
+    pointer-events: none;
+    user-select: none;
+
+    filter: blur(calc(var(--iunit) * 3));
+
+}
+
+
 
 
 /*****************************
