--- a/frontend/src/assets/styles/map-picker.css
+++ b/frontend/src/assets/styles/map-picker.css
@@ -1,3 +1,11 @@
+div.map-picker {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+    transition: .8s;
+}
+
 div.scroll-selector{
     position: absolute;
     transform: translate(0%, 0%);
